# nerd-dictation-plasmoid

./: CMakeLists.txt
applets/: CMakeLists.txt
applets/nerddictation/: CMakeLists.txt  Messages.sh
applets/nerddictation/knotifications5/: llxonedrive.notifyrc
applets/nerddictation/package/: metadata.desktop  metadata.json
applets/nerddictation/package/contents/ui/: main.qml
applets/nerddictation/plugin/: NerdDictationWidget.cpp  NerdDictationWidget.h  NerdDictationWidgetUtils.cpp  NerdDictationWidgetUtils.h  plugin.cpp  plugin.h  qmldir
debian/: changelog  control  copyright  plasma-widget-nerd-dictation.dirs  plasma-widget-nerd-dictation.install  plasma-widget-nerd-dictation.postinst  plasma-widget-nerd-dictation.postrm  plasma-widget-nerd-dictation.prerm  rules
debian/.debhelper/plasma-widget-nerd-dictation/dbgsym-root/usr/share/doc/: plasma-widget-nerd-dictation-dbgsym
po/: plasma_applet_org.kde.plasma.nerddictation.pot  update_translations.sh
po/ca/: plasma_applet_org.kde.plasma.nerddictation.po
po/ca@valencia/: plasma_applet_org.kde.plasma.nerddictation.po
po/en_GB/: plasma_applet_org.kde.plasma.nerddictation.po
po/es/: plasma_applet_org.kde.plasma.nerddictation.po
